--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
     <link href="splashscreens/iphone6_splash.png" media="(device-width: 375px) and (device-height: 667px) and (-webkit-device-pixel-ratio: 2)" rel="apple-touch-startup-image" />
 </head>
 
-<body onload="scheduleTime();" style = "background-color:#202020;color:white;font-size:6vw;">
-<h1 id = "time" style="font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;margin:0;position: absolute;top: 50%;left: 50%;transform: translateX(-50%) translateY(-50%);"></h1>
+<body onload="scheduleTime();" style = "background-color:#202020;color:white;font-size:10vw;">
+<p id = "time" style="font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;margin:0;position: absolute;top: 50%;left: 50%;transform: translateX(-50%) translateY(-50%);"><p>
 </body>
 
 <script>
