fix full dark mode

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <link href="splashscreens/iphone6_splash.png" media="(device-width: 375px) and (device-height: 667px) and (-webkit-device-pixel-ratio: 2)" rel="apple-touch-startup-image" />
 </head>
 
-<body onload="scheduleTime();" style = "background-color:#0000;color:white;font-size:10vw;">
+<body onload="scheduleTime();" style = "background-color:black;color:white;font-size:10vw;">
 <p id = "time" style="font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;margin:0;position: absolute;top: 50%;left: 50%;transform: translateX(-50%) translateY(-50%);"><p>
 </body>
 
