--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <link href="splashscreens/iphone6_splash.png" media="(device-width: 375px) and (device-height: 667px) and (-webkit-device-pixel-ratio: 2)" rel="apple-touch-startup-image" />
 </head>
 
-<body onload="var x = setInterval(updateTime(), 1000)" style = "background-color:black;color:white;font-size:10vw;">
+<body onload="updateTime();" style = "background-color:black;color:white;font-size:10vw;">
 <p id = "time" style="font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;margin:0;position: absolute;top: 50%;left: 50%;transform: translateX(-50%) translateY(-50%);"><p>
 </body>
 
@@ -35,9 +35,10 @@ function updateTime()
     else{ampm = "pm";}
 
     t.innerHTML = clock.getHours() +":"+ clock.getMinutes() + " " + ampm;
+
+    //console.log("Ran Update Timer at " + clock.getHours() + ":" + clock.getMinutes() + ":" + clock.getSeconds());
+
+    setTimeout(function(){updateTime();},1000);
 }
-function scheduleTime()
-{
-    var intervarl = setInterval(updateTime(), 1000);
-}
+
 </script>
