--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <body onload="updateTime();" style = "background-color:black;color:white;font-size:10vw;margin:0;padding:0;">
 <p id = "time" style="font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;margin:0;position: absolute;top: 50%;left: 50%;transform: translateX(-50%) translateY(-50%);"><p>
 
-<iframe src="https://open.spotify.com/embed/track/7xQAfvXzm3AkraOtGPWIZg" style = "position: fixed; bottom:0;" width="100%" height="80" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+<!-- <iframe src="https://open.spotify.com/embed/track/7xQAfvXzm3AkraOtGPWIZg" style = "position: fixed; bottom:0;" width="100%" height="80" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe> -->
 </body>
 
 <script>
@@ -36,6 +36,13 @@ function updateTime()
     if (parseInt(clock.getHours()/12) == 0){ampm = "am";}
     else{ampm = "pm";}
 
+    var hour = clock.getHours() % 12;
+
+    if (hour == 0)
+    {
+        hour = 12;
+    }
+
     var minute = clock.getMinutes();
 
     if (minute < 10)
@@ -43,7 +50,7 @@ function updateTime()
         minute = "0"+minute;
     } 
 
-    var currenttime = clock.getHours()%12 +":"+ minute + " " + ampm;
+    var currenttime = hour +":"+ minute + " " + ampm;
 
     t.innerHTML = currenttime;
 
