--- a/index.html
+++ b/index.html
@@ -54,6 +54,10 @@ function updateTime()
 
     t.innerHTML = currenttime;
 
+    if (hour == 9 & minute >= 55){
+        document.body.style.background = "red";
+    }
+
     //console.log("Ran Update Timer at " + clock.getHours() + ":" + clock.getMinutes() + ":" + clock.getSeconds());
 
     setTimeout(function(){updateTime();},1000);
