Return to normal

--- a/index.html
+++ b/index.html
@@ -54,13 +54,13 @@ function updateTime()
 
     t.innerHTML = currenttime;
 
-    if (hour == 9 & minute >= 55){
-        document.body.style.background = "red";
-    }
+    // if (hour == 9 & minute >= 55){
+    //     document.body.style.background = "red";
+    // }
 
-    if (hour == 10){
-        alert("Pencils Down!\nPlease Turn in Your Exams");
-    }
+    // if (hour == 10){
+    //     alert("Pencils Down!\nPlease Turn in Your Exams");
+    // }
 
     //console.log("Ran Update Timer at " + clock.getHours() + ":" + clock.getMinutes() + ":" + clock.getSeconds());
 
