--- a/bj.html
+++ b/bj.html
@@ -1,3 +1,3 @@
-<body>
-    <iframe src="http://70.188.7.223:3000" width="100vw" height="100vw;" sytle="position:absolute;top:0;left:0;"></iframe>
+<body style="margin:0;">
+    <iframe src="http://70.188.7.223:3000" sytle="position:absolute;top:0;left:0;width:100vw;height:100vw;"></iframe>
 </body>
