simple ui better

--- a/gethelp/index.html
+++ b/gethelp/index.html
@@ -1,8 +1,11 @@
+<h1>Request Lab Help</h1>
+<h2>Section 106</h2>
+<br>
 <form action="https://discordapp.com/api/webhooks/697945039229157416/HhGbfJYVtoaHk0Vs_MAtZq6L8qSuKR_P0vYkvdc9Bcp__0mwnQHO2f4jslJ2RkpeZIRV" method="POST">
     <label for="username">Name</label><br>
     <input type="text" id = "username" name="username"><br>
     <label for="message">Room Number</label><br>
-    <input type="text" id="message" name="content">
+    <input type="text" id="message" name="content"><br>
     <input type="submit">
 </form> 
   
