--- a/index.html
+++ b/index.html
@@ -18,15 +18,21 @@
     <link href="splashscreens/ipadpro3_splash.png" media="(device-width: 834px) and (device-height: 1194px) and (-webkit-device-pixel-ratio: 2)" rel="apple-touch-startup-image" />
     <link href="splashscreens/ipadpro2_splash.png" media="(device-width: 1024px) and (device-height: 1366px) and (-webkit-device-pixel-ratio: 2)" rel="apple-touch-startup-image" />
     <link href="splashscreens/iphone6_splash.png" media="(device-width: 375px) and (device-height: 667px) and (-webkit-device-pixel-ratio: 2)" rel="apple-touch-startup-image" />
+    <script src="https://appsforoffice.microsoft.com/lib/1/hosted/office.js" type="text/javascript"></script>
 </head>
 
-<body onload="updateTime();" style = "background-color:black;color:white;font-size:10vw;margin:0;padding:0;">
+<body onload="onLoad();" style = "background-color:black;color:white;font-size:10vw;margin:0;padding:0;">
 <p id = "time" style="font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;margin:0;position: absolute;top: 50%;left: 50%;transform: translateX(-50%) translateY(-50%);"><p>
 
 <!-- <iframe src="https://open.spotify.com/embed/track/7xQAfvXzm3AkraOtGPWIZg" style = "position: fixed; bottom:0;" width="100%" height="80" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe> -->
 </body>
 
 <script>
+function onLoad(){
+    updateTime();
+    Office.DialogPage.readyToShow();
+}
+
 function updateTime()
 {
     var clock = new Date();
