--- a/survey.html
+++ b/survey.html
@@ -4,9 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://mfpembedcdnmsit.azureedge.net/mfpembedcontmsit/Embed.js" type="text/javascript"></script>
+    <link rel="stylesheet" type="text/css" href="https://mfpembedcdnmsit.azureedge.net/mfpembedcontmsit/Embed.css" />
     <title>Document</title>
 </head>
-<body>
-    <script src="https://mfpembedcdnmsit.azureedge.net/mfpembedcontmsit/Embed.js" type="text/javascript"></script><link rel="stylesheet" type="text/css" href="https://mfpembedcdnmsit.azureedge.net/mfpembedcontmsit/Embed.css" /><script type = "text/javascript" >function renderSurvey(parentElementId,FirstName, LastName, locale){var se = new SurveyEmbed("v4j5cvGGr0GRqy180BHbR50RHFuvmK9BirmnEacizpZUMFVTSEIxQjc0NlRHM0ExQkZCSldXR0tRSS4u","https://customervoice.microsoft.com/","https://mfpembedcdnmsit.azureedge.net/mfpembedcontmsit/","true");var context = {"First Name": FirstName,"Last Name": LastName,"locale": locale,};se.renderInline(parentElementId, context);}</script>
+<body style="margin:0" onload='renderSurvey("Parent","FirstName","LastName","en")'>
+    
+    <div id="Parent" style="height: 100vh;"></div>
+
 </body>
+
+<script type = "text/javascript" >function renderSurvey(parentElementId,FirstName, LastName, locale){var se = new SurveyEmbed("v4j5cvGGr0GRqy180BHbR50RHFuvmK9BirmnEacizpZUMFVTSEIxQjc0NlRHM0ExQkZCSldXR0tRSS4u","https://customervoice.microsoft.com/","https://mfpembedcdnmsit.azureedge.net/mfpembedcontmsit/","true");var context = {"First Name": FirstName,"Last Name": LastName,"locale": locale,};se.renderInline(parentElementId, context);}</script>
+
 </html>
